[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "semantic-retrieval"
version = "0.1.0"
authors = [
    { name="Suyog Sonwalkar", email="suyog@lastmileai.dev" },
]
description = "Semantic Retrieval Python Library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/lastmile-ai/semantic-retrieval"
"Bug Tracker" = "https://github.com/lastmile-ai/semantic-retrieval/issues"

# Black formatting
[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .hg
    | .mypy_cache
    | .tox
    | venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''


[tool.pyright]
typeCheckingMode = "strict"
include = ["src", "tests"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]
ignore = ["src/oldstuff"]
defineConstant = { DEBUG = true }
venv = "semantic-retrieval"

# reportMissingImports = true
# reportMissingTypeStubs = false

reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false

pythonVersion = "3.11.5"